--- a/Pod_Name.yaml
+++ b/Pod_Name.yaml
@@ -2,5 +2,5 @@
 #     kubectl get po -A | grep <POD_NAME> | awk '{print $1}'    
 
 podDetails:
-  - name: bliprime-service-5d7cddfddd-k7kgq
-    namespace: vod
+  - name: <pod_name>
+    namespace: ns
